--- a/404.html
+++ b/404.html
@@ -3,9 +3,15 @@ layout: default
 ---
 
 
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<section class="hero is-link is-fullheight">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title is-size-1">
+        404
+      </h1>
+      <h2 class="subtitle">
+        Page Not Found :(
+      </h2>
+    </div>
+  </div>
+</section>
