--- a/tags.html
+++ b/tags.html
@@ -7,14 +7,28 @@ site.tags is a hash: {"tag_name": \[...posts\], "another tag name": ...}
 tag[0] refers to the key, "tag_name"; tag[1] refers to the value, [...posts]
 {% endcomment %}
 
-{% for tag in site.tags %}
-
-<div>
-    <h1>Posts in {{ tag[0] }}</h1>
-    <ul>
-        {% for post in tag[1] %}
-            <li><a href="{{ post.url | relative_url }}">{{ post.title }}, posted on {{ post.date | date_to_string }}</a></li>
+<section class="section">
+  <div class="container">
+    <div class="content">
+      <h3>Tags: </h3>
+      <div class="tags">
+        {% for tag in site.tags %}
+        <a href="#{{ tag[0] }}" class="tag is-medium is-link">{{ tag[0] }}</a>
         {% endfor %}
-    </ul>
-</div>
-{% endfor %}
+      </div>
+      <hr>
+      
+      {% for tag in site.tags %}
+      
+      <h1 id="{{ tag[0] }}">{{ tag[0] }}</h1>
+      <ul>
+        {% for post in tag[1] %}
+        <a href="{{ post.url | relative_url }}"><li>{{ post.title }}</li></a>
+        {% endfor %}
+      </ul>
+
+      {% endfor %}
+
+    </div>
+  </div>
+</section>
