--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<section class="hero is-link is-fullheight">
+<section class="hero is-link hero-404">
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title is-size-1">
